Fix build and running in docker container Use 204 http status codes instead of 203 Refactored storage part
